--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SERVICE_PORT=50951
-DB_SERVER_TYPE=sqlite
-DB_SERVER_ADDR=test.db
+DB_SERVER_TYPE=postgres
+DB_SERVER_ADDR=host=localhost user=postgres dbname=forumdb port=5432 sslmode=disable
