--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 SERVICE_PORT=50951
 DB_SERVER_TYPE=postgres
 DB_SERVER_ADDR=host=localhost user=postgres dbname=forumdb port=5432 sslmode=disable
+
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=localhost:4317
+EXEC_ENV=local
